Making the nomenclature more consistent

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -293,7 +293,7 @@
 
 							<code><pre>
 
-   const filter = new BackgroundFilter(stream, {token: 'vectorly-token', type: 'virtual', 'image': 'my-image-url.png'});
+   const filter = new BackgroundFilter(stream, {token: 'vectorly-token', background: 'my-image-url.png'});
 					</pre></code>
 						</p>
 
