--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -383,20 +383,20 @@
 
 						<p><b>Twilio</b></p>
 
-						<p>You can enable filters on any <code>VideoTrack</code> object by feeding it to the Twilio plugin (see <a href="https://media.twiliocdn.com/sdk/js/video/releases/2.13.1/docs/VideoTrack.html#attach">reference</a>).
+						<p>You can enable filters on any <code>VideoTrack</code> object by extracting the raw <code>MediaStreamTrack</code>, running the filter on that, and creating a new <code>LocalVideoTrack</code>.
 
 
 						<pre><code>
-   const Video = require('twilio-video');
+   const Twilio = require('twilio-video');
 
-   Video.createLocalVideoTrack().then(function(videoTrack) {
-     const filter = new BackgroundFilter(videoTrack, {token: 'insert-vectorly-token', background: 'blur'});
+   const localVideoTrack = await Twilio.createLocalVideoTrack();
+   const inputStream = new MediaStream([videoTrack.mediaStreamTrack]);
+   const filter = new BackgroundFilter(inputStream, {token: 'insert-vectorly-token', background: 'blur'});
+   const outputStream = filter.getOutput();
+   const filteredTrack = new Twilio.LocalVideoTrack(outputStream.getVideoTracks()[0]);
 
-	 filter.getOutput().then(function(filteredTrack){
-						//publish filteredTrack
-	 });
+   room.localParticipant.publishTrack(filteredTrack);
 
-   });
 							</code></pre>
 
 
