--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -392,7 +392,7 @@
    const localVideoTrack = await Twilio.createLocalVideoTrack();
    const inputStream = new MediaStream([videoTrack.mediaStreamTrack]);
    const filter = new BackgroundFilter(inputStream, {token: 'insert-vectorly-token', background: 'blur'});
-   const outputStream = filter.getOutput();
+   const outputStream = await filter.getOutput();
    const filteredTrack = new Twilio.LocalVideoTrack(outputStream.getVideoTracks()[0]);
 
    room.localParticipant.publishTrack(filteredTrack);
