Fix npm install instructions

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -137,7 +137,7 @@
 
 
 							<p> <b>NPM</b>
-								<code><pre>npm -i @vectorly/ai-filters</pre></code>
+								<code><pre>npm install --save @vectorly-io/ai-filters</pre></code>
 							</p>
 
 							<p><b>CDN</b>
