Added browser support

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -92,6 +92,7 @@
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-background"><span class="theme-icon-holder mr-2"><i class="fas fa-file-code"></i></span>Background Filters</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-loading">Loading</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-basic-usage">Basic Usage</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-support">Browser Support</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-integration">Integration</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-images">Sample Images</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-events">Events</a></li>
@@ -301,6 +302,77 @@
 						</p>
 
 
+
+
+
+					</section>
+
+
+					<section class="docs-section"  id="item-background-support">
+
+						<h4 class="section-heading">Browser support</h4>
+
+						<p>
+
+						Our background filters are supported on all major browsers, except for internet explorer. See a table of browser support below
+						</p>
+
+						<figure class="figure docs-figure py-3">
+
+
+							<div class="table-responsive my-4">
+								<table class="table" style="border-color: white">
+
+									<tbody >
+									<tr>
+										<td style="border-top: white;"><img class="figure-img img-fluid" src="assets/images/chrome.svg" alt="" style="width: 50px; margin: auto; display: block; position: relative; opacity: 0;"></td>
+										<td style="border-top: white;"><img class="figure-img img-fluid" src="assets/images/chrome.svg" alt="" style="width: 50px; margin: auto; display: block; position: relative;"></td>
+										<td style="border-top: white;"><img class="figure-img img-fluid" src="assets/images/safari.svg" alt="" style="width: 50px; margin: auto; display: block; position: relative;"></td>
+										<td style="border-top: white;"><img class="figure-img img-fluid" src="assets/images/firefox.svg" alt="" style="width: 50px; margin: auto; display: block; position: relative;"></td>
+										<td style="border-top: white;"><img class="figure-img img-fluid" src="assets/images/edge.svg" alt="" style="width: 50px; margin: auto; display: block; position: relative;"></td>
+										<td style="border-top: white;"><img class="figure-img img-fluid" src="assets/images/opera.svg" alt="" style="width: 50px; margin: auto; display: block; position: relative;"></td>
+										<td style="border-top: white;"><img class="figure-img img-fluid" src="assets/images/ie.svg" alt="" style="width: 50px; margin: auto; display: block; position: relative;"></td>
+									</tr>
+									<tr style="text-align: center; font-weight: bold;" >
+										<td style="border-top: white;"></td>
+										<td style="border-top: white;">Chrome</td>
+										<td style="border-top: white;">Safari</td>
+										<td style="border-top: white;">Firefox</td>
+										<td style="border-top: white;">Edge</td>
+										<td style="border-top: white;">Opera</td>
+										<td style="border-top: white;">IE</td>
+									</tr>
+
+									<tr style="text-align: center">
+										<td style="border-top: white; font-weight: bold;">Supported</td>
+										<td style="border-top: white;background: #d3ffd8">Yes</td>
+										<td style="border-top: white;background: #d3ffd8">Yes</td>
+										<td style="border-top: white;background: #d3ffd8">Yes</td>
+										<td style="border-top: white;background: #d3ffd8">Yes</td>
+										<td style="border-top: white;background: #d3ffd8">Yes</td>
+										<td style="border-top: white;background: #ffd7d7">No</td>
+									</tr>
+
+									<tr style="text-align: center">
+										<td style="border-top: white; font-weight: bold;">SIMD acceleration</td>
+										<td style="border-top: white; background: #d3ffd8">Yes, since 91</td>
+										<td style="border-top: white; background: #ffeccf">No</td>
+										<td style="border-top: white;background: #d3ffd8">Yes, since 89</td>
+										<td style="border-top: white;background: #d3ffd8">Yes, since 84</td>
+										<td style="border-top: white; background: #d3ffd8">Yes, since 77</td>
+										<td style="border-top: white;background: #ffd7d7">No</td>
+									</tr>
+
+									</tbody>
+								</table>
+							</div>
+
+						</figure>
+
+
+						<p>
+							Recent versions of Chrome, Firefox, Edge and Opera support SIMD acceleration since June 2021. SIMD acceleration enables much higher framerates and low CPU overhead.
+						</p>
 
 
 
