added upscaling browser support

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -702,6 +702,60 @@
 
 
 
+					<section class="docs-section"  id="item-upscale-support">
+
+						<h4 class="section-heading">Browser support</h4>
+
+						<p>
+
+							Our upscaling filters are supported on all major browsers, except for internet explorer. See a table of browser support below
+						</p>
+
+						<figure class="figure docs-figure py-3">
+
+
+							<div class="table-responsive my-4">
+								<table class="table" style="border-color: white">
+
+									<tbody >
+									<tr>
+										<td style="border-top: white;"><img class="figure-img img-fluid" src="assets/images/chrome.svg" alt="" style="width: 50px; margin: auto; display: block; position: relative; opacity: 0;"></td>
+										<td style="border-top: white;"><img class="figure-img img-fluid" src="assets/images/chrome.svg" alt="" style="width: 50px; margin: auto; display: block; position: relative;"></td>
+										<td style="border-top: white;"><img class="figure-img img-fluid" src="assets/images/safari.svg" alt="" style="width: 50px; margin: auto; display: block; position: relative;"></td>
+										<td style="border-top: white;"><img class="figure-img img-fluid" src="assets/images/firefox.svg" alt="" style="width: 50px; margin: auto; display: block; position: relative;"></td>
+										<td style="border-top: white;"><img class="figure-img img-fluid" src="assets/images/edge.svg" alt="" style="width: 50px; margin: auto; display: block; position: relative;"></td>
+										<td style="border-top: white;"><img class="figure-img img-fluid" src="assets/images/opera.svg" alt="" style="width: 50px; margin: auto; display: block; position: relative;"></td>
+										<td style="border-top: white;"><img class="figure-img img-fluid" src="assets/images/ie.svg" alt="" style="width: 50px; margin: auto; display: block; position: relative;"></td>
+									</tr>
+									<tr style="text-align: center; font-weight: bold;" >
+										<td style="border-top: white;"></td>
+										<td style="border-top: white;">Chrome</td>
+										<td style="border-top: white;">Safari</td>
+										<td style="border-top: white;">Firefox</td>
+										<td style="border-top: white;">Edge</td>
+										<td style="border-top: white;">Opera</td>
+										<td style="border-top: white;">IE</td>
+									</tr>
+
+									<tr style="text-align: center">
+										<td style="border-top: white; font-weight: bold;">Supported</td>
+										<td style="border-top: white;background: #d3ffd8">Yes</td>
+										<td style="border-top: white;background: #d3ffd8">Yes</td>
+										<td style="border-top: white;background: #d3ffd8">Yes</td>
+										<td style="border-top: white;background: #d3ffd8">Yes</td>
+										<td style="border-top: white;background: #d3ffd8">Yes</td>
+										<td style="border-top: white;background: #ffd7d7">No</td>
+									</tr>
+
+									</tbody>
+								</table>
+							</div>
+
+						</figure>
+
+
+					</section>
+
 					<section class="docs-section" id="item-upscale-integration">
 
 
