Fixed import statement

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -259,7 +259,7 @@
 						<p>The basic API for loading the background filter via NPM is:
 							<code><pre>
 
-     import BackgroundFilter from @vectorly-io/ai-filters;
+     import { BackgroundFilter } from '@vectorly-io/ai-filters';
 					</pre></code>
 
 						</p>
