Add API doc references

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -273,6 +273,9 @@
      const BackgroundFilter = vectorly.BackgroundFilter;
 					</pre></code>
 
+
+					<p>You can find more detailed loading instructions on the <a href="https://cdn.vectorly.io/ai-filters/docs/latest/">API reference page</a> </p>
+
 					<section class="docs-section"  id="item-background-basic-usage">
 
 						<h4 class="section-heading">Basic Usage</h4>
@@ -303,6 +306,7 @@
 
 
 
+						<p>You can find a full set of methods and parameters on the <a href="https://cdn.vectorly.io/ai-filters/docs/latest/">API reference page</a> </p>
 
 
 					</section>
