Elaborate on SIMD acceleration

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -405,7 +405,7 @@
 
 						<b>SIMD acceleration</b>
 						<p>
-							Recent versions of Chrome, Firefox, Edge and Opera support SIMD acceleration since June 2021. SIMD acceleration enables much higher framerates and low CPU overhead.
+							Recent versions of Chrome, Firefox, Edge and Opera support SIMD acceleration since June 2021. SIMD acceleration enables much higher framerates and low CPU overhead. SIMD acceleration is enabled automatically by default, if it is supported by the browser.
 						</p>
 
 
