--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -1358,7 +1358,7 @@ canvas.style.height = desiredheight + "px";
 					<section class="docs-section" id="item-background-performance">
 
 						<h2 class="section-heading">Background Segmentation</h2>
-						<p>Our background filter is based on the <a href="https://google.github.io/mediapipe/solutions/selfie_segmentation.html">Google Selfie model</a>, however it implemented and deployed with WebGL-based optimizations to obtain much more efficient usage than Google Meet itself and other background SDKs</p>
+						<p>Our background filter is based on the <a href="https://google.github.io/mediapipe/solutions/selfie_segmentation.html">Google Selfie model</a>, however it implemented and deployed with WebGL-based optimizations to use much less CPU than Google Meet itself or other background SDKs.</p>
 
 
 
@@ -1368,8 +1368,6 @@ canvas.style.height = desiredheight + "px";
 
 
 						<p>You can verify performance for yourself with a profiling tool like Google Chrome's <a href="https://developer.chrome.com/docs/devtools/evaluate-performance/reference/"> performance profiler</a></p>
-
-						<p>You can also see </p>
 
 						<figure class="figure docs-figure py-3">
 							<img class="figure-img img-fluid" src="assets/images/framerate-background.svg" alt="" style="width: 800px;">
