Updated based on worker thread usage

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -1358,7 +1358,7 @@ canvas.style.height = desiredheight + "px";
 					<section class="docs-section" id="item-background-performance">
 
 						<h2 class="section-heading">Background Segmentation</h2>
-						<p>Our background filter is based on the <a href="https://google.github.io/mediapipe/solutions/selfie_segmentation.html">Google Selfie model</a>, however it implemented and deployed with WebGL-based optimizations to use much less CPU than Google Meet itself or other background SDKs.</p>
+						<p>Our background filter is based on the <a href="https://google.github.io/mediapipe/solutions/selfie_segmentation.html">Google Selfie model</a>, however it implemented and deployed with WebGL-based optimizations to use less CPU than Google Meet itself or other background SDKs, especially on the main thread.</p>
 
 
 
