Edited the library

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -719,7 +719,9 @@
 						<li>Performance is abnormally slow on some graphics cards</li>
 					</ul>
 
-					<p>You can test our current WebGL model <a href="https://files.vectorly.io/demo/background-filter/index.html">here</a>.</p>
+					<p>We are currently training our models more extensively and making improvements to the performance.</p>
+
+					<p>You can test our current WebGL model <a href="https://files.vectorly.io/demo/background/virtual-background-demo/unet-toggle/index.html">here</a>.</p>
 
 					<p>Once our WebGL model is in Beta, you will be able to enable it with the following API:
 	<code><pre>
