Fixed API doc for check performance

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -1492,7 +1492,7 @@ canvas.style.height = desiredheight + "px";
 
 						<pre>
 							 <code>
-     const performanceResults  = await BackgroundFilter.checkPerformance();
+     const performanceResults  = await BackgroundFilter.checkPerformance({token: '...'});
 							 </code>
 						 </pre>
 
